--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
-dash==2.6.2
+dash==2.8.1
+dash-mantine-components==0.12.0
+dash-iconify==0.1.2
+plotly==5.13.1
 gunicorn==20.0.4
 pandas==1.5.1
 werkzeug==2.2.2
+xgboost==1.7.4
+pyarrow==1.23.5
 
-dash-shap-components==0.0.2
-shap==0.40.0
+# dash-shap-components==0.0.2
+# shap==0.40.0
+dash-ag-grid==2.0.0a1
+numpy==1.23.5
+shapash==2.3.0
