--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ gunicorn==20.0.4
 pandas==1.5.1
 werkzeug==2.2.2
 xgboost==1.7.4
-pyarrow==1.23.5
+pyarrow
 
 # dash-shap-components==0.0.2
 # shap==0.40.0
